force-app/main/default/objects/OneCRM__BatchApexError__c/OneCRM__BatchApexError__c.object-meta.xml
<CustomObject>
    <label>Batch Apex Error</label>
    <nameField>
        <label>Batch Apex Error Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Apex Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>