force-app/main/default/objects/OneCRM__BatchApexError__c/fields/OneCRM__Apex_Job_Name__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Apex_Job_Name__c</fullName>
    <label>Apex Job Name</label>
    <type>TextArea</type>
</CustomField>