force-app/main/default/objects/OneCRM__BatchApexError__c/fields/OneCRM__Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Exception_Type__c</fullName>
    <label>Exception Type</label>
    <type>TextArea</type>
</CustomField>