force-app/main/default/objects/OneCRM__BatchApexError__c/fields/OneCRM__Job_Scope__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Job_Scope__c</fullName>
    <label>Job Scope</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>