force-app/main/default/objects/OneCRM__BatchApexError__c/fields/OneCRM__Message__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>