force-app/main/default/objects/OneCRM__BatchApexError__c/fields/OneCRM__Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Stack_Trace__c</fullName>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>